ФЗ7 - Первая итерация